Feat/v0.4 integrity verification (#19)
